<resources>
    <string name="app_name">CEU</string>
    <string name="nav_header_title">Controle de Estoque Único</string>
    <string name="nav_header_subtitle">Feito por Bruno Barcarolo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_disconnect">Sair</string>

    <string name="menu_home">Tela Inicial</string>
    <string name="menu_newuser">Novo Usuário</string>
    <string name="menu_edituser">Editar Usuário</string>
    <string name="menu_newproduct">Novo Produto</string>
    <string name="menu_editproduct">Editar Produto</string>
    <string name="menu_inventory">Estoque</string>
    <string name="pesquisa">Clique na lupa para pesquisar</string>
</resources>